--- a/characters/luffy.html
+++ b/characters/luffy.html
@@ -33,18 +33,10 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav ">
-                <li class="nav-item ">
-                    <a class="nav-link active text-grey" href="../index.html">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active text-grey" href="../anime.html">Аниме</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active text-grey" href="../manga.html">Манга</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="characters.html">Персонажи</a>
-                </li>
+                <li class="nav-item "><a class="nav-link active text-grey" href="../index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link active text-grey" href="../anime.html">Аниме</a></li>
+                <li class="nav-item"><a class="nav-link active text-grey" href="../manga.html">Манга</a></li>
+                <li class="nav-item"><a class="nav-link active text-white" aria-current="page" href="characters.html">Персонажи</a></li>
             </ul>
         </div>
     </div>
@@ -73,32 +65,25 @@
 
         <div class="carousel-inner">
             <div class="carousel-item height-480px active">
-                <img src="../img/characters/luffy/gear-5.png" class="d-block mx-auto img-fluid"
-                     alt="Первая фотография">
+                <img src="../img/characters/luffy/gear-5.png" class="d-block mx-auto img-fluid" alt="Первая фотография">
             </div>
             <div class="carousel-item height-480px">
-                <img src="../img/characters/luffy/luffy.png" class="d-block mx-auto img-fluid"
-                     alt="Вторая фотография">
+                <img src="../img/characters/luffy/luffy.png" class="d-block mx-auto img-fluid" alt="Вторая фотография">
             </div>
             <div class="carousel-item height-480px">
-                <img src="../img/characters/luffy/luffy2.png" class="d-block mx-auto img-fluid"
-                     alt="Третья фотография">
+                <img src="../img/characters/luffy/luffy2.png" class="d-block mx-auto img-fluid" alt="Третья фотография">
             </div>
             <div class="carousel-item height-480px">
-                <img src="../img/characters/luffy/luffy3.png" class="d-block mx-auto img-fluid"
-                     alt="Четвертая фотография">
+                <img src="../img/characters/luffy/luffy3.png" class="d-block mx-auto img-fluid" alt="Четвертая фотография">
             </div>
             <div class="carousel-item height-480px">
-                <img src="../img/characters/luffy/luffy4.png" class="d-block mx-auto img-fluid"
-                     alt="Пятая фотография">
+                <img src="../img/characters/luffy/luffy4.png" class="d-block mx-auto img-fluid" alt="Пятая фотография">
             </div>
             <div class="carousel-item height-480px">
-              <img src="../img/characters/luffy/luffy.png" class="d-block mx-auto img-fluid"
-                   alt="Шестая фотография">
+              <img src="../img/characters/luffy/luffy.png" class="d-block mx-auto img-fluid" alt="Шестая фотография">
           </div>
           <div class="carousel-item height-480px">
-            <img src="../img/characters/luffy/luffy.png" class="d-block mx-auto img-fluid"
-                 alt="Седьмая фотография">
+            <img src="../img/characters/luffy/luffy.png" class="d-block mx-auto img-fluid" alt="Седьмая фотография">
         </div>
         </div>
 
@@ -113,20 +98,24 @@
     </div>
 
     <!-- d-flex justify-content-start mt-3 -->
-    <div class="d-flex justify-content-start mt-3 overflow-auto">
-        <img src="../img/characters/luffy/gear-5.png" class="img-fluid me-2" alt="Маленькая фотография 1" data-bs-target="#carouselExample" data-bs-slide-to="0" style="max-width: 200px; height: auto;">
-        <img src="../img/characters/luffy/luffy.png" class="img-fluid me-2" alt="Маленькая фотография 2" data-bs-target="#carouselExample" data-bs-slide-to="1" style="max-width: 200px; height: auto;">
-        <img src="../img/characters/luffy/luffy2.png" class="img-fluid me-2" alt="Маленькая фотография 3" data-bs-target="#carouselExample" data-bs-slide-to="2" style="max-width: 200px; height: auto;">
-        <img src="../img/characters/luffy/luffy3.png" class="img-fluid me-2" alt="Маленькая фотография 4" data-bs-target="#carouselExample" data-bs-slide-to="3" style="max-width: 200px; height: auto;">
-        <img src="../img/characters/luffy/luffy4.png" class="img-fluid me-2" alt="Маленькая фотография 5" data-bs-target="#carouselExample" data-bs-slide-to="4" style="max-width: 200px; height: auto;">
-        <img src="../img/characters/luffy/luffy.png" class="img-fluid me-2" alt="Маленькая фотография 1" data-bs-target="#carouselExample" data-bs-slide-to="5" style="max-width: 200px; height: auto;">
-        <img src="../img/characters/luffy/luffy.png" class="img-thumbnail img-fluid" alt="Маленькая фотография 1" data-bs-target="#carouselExample" data-bs-slide-to="6" style="max-width: 200px; height: auto;">
+    <div class="d-flex justify-content-start mt-3 overflow-auto section">
+        <img src="../img/characters/luffy/gear-5.png" class="img-fluid me-2 hover" alt="Маленькая фотография 1" data-bs-target="#carouselExample" data-bs-slide-to="0" style="max-width: 200px; height: auto;">
+        <img src="../img/characters/luffy/luffy.png" class="img-fluid me-2 hover" alt="Маленькая фотография 2" data-bs-target="#carouselExample" data-bs-slide-to="1" style="max-width: 200px; height: auto;">
+        <img src="../img/characters/luffy/luffy2.png" class="img-fluid me-2 hover" alt="Маленькая фотография 3" data-bs-target="#carouselExample" data-bs-slide-to="2" style="max-width: 200px; height: auto;">
+        <img src="../img/characters/luffy/luffy3.png" class="img-fluid me-2 hover" alt="Маленькая фотография 4" data-bs-target="#carouselExample" data-bs-slide-to="3" style="max-width: 200px; height: auto;">
+        <img src="../img/characters/luffy/luffy4.png" class="img-fluid me-2 hover" alt="Маленькая фотография 5" data-bs-target="#carouselExample" data-bs-slide-to="4" style="max-width: 200px; height: auto;">
+        <img src="../img/characters/luffy/luffy.png" class="img-fluid me-2 hover" alt="Маленькая фотография 1" data-bs-target="#carouselExample" data-bs-slide-to="5" style="max-width: 200px; height: auto;">
+        <img src="../img/characters/luffy/luffy.png" class="img-thumbnail img-fluid hover" alt="Маленькая фотография 1" data-bs-target="#carouselExample" data-bs-slide-to="6" style="max-width: 200px; height: auto;">
     </div>
+    <p><h4 class="inline">Монки Д. Луффи,</h4> также известный как «Мугивара Луффи» или просто «Мугивара» («МСоломенная шляпа), — главный герой аниме и манги One Piece. Основатель капитан Пиратов Соломенной Шляпы, а также один из четырёх лучших бойцов.</p>
+    <p>Его мечта — стать Королём Пиратов, и найти легендарное сокровище Ван Пис, оставленное покойным Королём Пиратов — Гол Д. Роджером.[27] Он верит, что став Королём Пиратов, он станет самым свободным человеком в мире. Он съел Дьявольский плод Гому Гому но Ми, обретя возможность растягивать своё тело подобно резине.[28]. После его вторжения в Тотто Лэнд и действий против Ёнко Большая Мамочка он долгое время считался мировой прессой Пятым Императором,[29] но после победы над Кайдо Луффи официально занял его место в числе Ёнко.</p>
+    <p>Также он сын лидера Революционной армии Монки Д. Драгона,[30] внук легендарного и известного на весь мир бывшего Вице-адмирала Морского Дозора Монки Д. Гарпа,[31] сводный названный младший брат покойного бывшего капитана Пиковых Пиратов, командира 2-ой дивизии Пиратов Белоуса и родного сына Гол Д. Роджера «Огненного кулака» Портгаса Д. Эйса, начальника штаба Революционной армии Сабо и приёмный сын Кёрли Дадан.</p>
+    <p>Луффи имеет мировую известность за причинение проблем Ситибукаям, Морским Дозорным и даже двум из Ёнко (Большой Мамочке и Кайдо), совершая преступления и действия, которые представляют огромную угрозу Мировому Правительству. Причём, в большинстве этих противостояний, он выходил победителем. Он стал известен своей «безрассудностью» и даже, в некоторой мере, «безумием» после инцидента на Эниес Лобби, нападение на Мировых Знатей, вторжения в Импел Даун и участия в битве при Маринфорде. Поэтому он знаменит тем, что является единственным пиратом, который не только сумел пройти во все три самые главные правительственные сооружения и совершить преступления, но и также сумел выбраться из них живым, столкнувшись с невероятно сильными противниками в каждом из них. Плюс тот факт, что он ударил Мирового Знать, зная обо всех возможных последствиях, и его наследственность обеспечили признание Луффи «потенциально опасным», что сделало его злейшим врагом адмирала флота Сакадзуки, Штаб-квартиру Морского Дозора и Мирового Правительства.[32]</p>
+    <p>В начале арки Совета Королей, достижения Луффи были скомпилированы, сильно раздувая его поступки, который уже были огромными с самого начала. Это включает его отношения с его сводными названными старшими братьями — покойным бывшим капитаном Пиковых Пиратов, командиром 2-ой дивизии Пиратов Белоуса и родным сыном Гол Д. Роджера «Огненным кулаком» Портгасом Д. Эйсом и начальником штаба Революционной армии Сабо, флот, который неофициально сформировался под ним, операция по проникновению на территорию Большой Мамочки — Тотто Лэнд, где он победил Конфетных Генералов Пиратов Биг Мам — Шарлотту Крекера и Шарлотту Катакури, предпринял попытку убийства самой Большой Мамочки, уничтожив её замок непреднамеренно и быстро создал союз с Джермой 66, Пиратами Солнца и Пиратами Огненного Танка перед тем, как сбежать после того, как убийство не удалось. Хотя его возможности были слегка преувеличены прессой, его достижения были достаточно велики, чтобы он был официально назван «Пятым Императором Моря».[29]</p>
+    <p>До прибытия на архипелаг Сабаоди за Луффи была назначена награда BeliSymbol300 000 000 и он был одним из одиннадцати пиратов-новичков с наградами за голову в размере более BeliSymbol100 000 000, которые одновременно достигли Рэд Лайн,[33] и теперь является одним из двенадцати пиратов «Худшего Поколения»[34]. После таймскипа награда за голову Луффи стала составлять BeliSymbol400 000 000, как было сказано «Фальшивым Луффи» и подтверждено Пасифистой. Позже, когда команда спустилась на Остров Рыболюдей, Ходи Джонс также показал листовку с ценой за Луффи, на которой была написана его новая награда. После инцидента на Дресс Розе и победы над одним из Ситибукаев — Донкихотом Дофламинго, его награда была увеличена до BeliSymbol500 000 000.[18][19] После инцидента на территории Большой Мамочки Луффи получил награду — BeliSymbol1 500 000 000.[35] После битвы на Онигасиме и победы над Кайдо, награда Луффи увеличилась до BeliSymbol3 000 000 000.</p>
 </div>
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
