--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
             <div class="card text-bg-dark shadow-sm bg-body-tertiary rounded position-relative overflow-hidden">
                 <img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 420px;" alt="...">
                 <div class="card-img-overlay d-flex align-items-end">
-                    <a href="characters/luffy.html"><h5 class="card-title card-black rounded-3 text-bg-secondary">Луффи</h5></a>
+                    <a href="characters/luffy.html"><h5 class="card-title card-black rounded-3 text-bg-secondary stretched-link">Луффи</h5></a>
+                    <!-- <a href="#" class="btn btn-primary stretched-link">Перейти куда-нибудь</a> -->
                 </div>
             </div>
           </div>
@@ -117,13 +118,13 @@
             <div class="card text-bg-dark shadow-sm mb-3 bg-body-tertiary rounded flex-row">
               <img src="img/zorogif.gif" class="img-fluid object-fit-cover" style="height: 150px;" alt="...">
               <div class="card-img-overlay d-flex align-items-end">
-                <a href="characters/zoro.html"><h5 class="card-title card-black rounded">Зоро</h5></a>
+                <a href="characters/zoro.html"><h5 class="card-title card-black rounded stretched-link">Зоро</h5></a>
               </div>
             </div>
             <div class="card text-bg-dark shadow-sm mb-3 bg-body-tertiary rounded flex-row">
               <img src="img/namigif.gif" class="img-fluid object-fit-cover" style="height: 250px;" alt="...">
               <div class="card-img-overlay d-flex align-items-end">
-                <a href="characters/nami.html"><h5 class="card-title card-black rounded">Нами</h5></a>
+                <a href="characters/nami.html"><h5 class="card-title card-black rounded stretched-link">Нами</h5></a>
               </div>
             </div>
           </div>
@@ -131,7 +132,7 @@
             <div class="card text-bg-dark shadow-sm bg-body-tertiary rounded flex-row">
               <img src="img/sanjigif.gif" class="img-fluid object-fit-cover" style="height: 420px;" alt="...">
               <div class="card-img-overlay d-flex align-items-end">
-                <a href="characters/sanji.html"><h5 class="card-title card-black rounded">Санджи</h5></a>
+                <a href="characters/sanji.html"><h5 class="card-title card-black rounded stretched-link">Санджи</h5></a>
               </div>
             </div>
           </div>
@@ -139,13 +140,13 @@
             <div class="card text-bg-dark shadow-sm mb-3 bg-body-tertiary rounded flex-row">
               <img src="img/lawgif.gif" class="img-fluid object-fit-cover" style="height: 250px;" alt="...">
               <div class="card-img-overlay d-flex align-items-end">
-                <a href="characters/law.html"><h5 class="card-title card-black rounded">Ло</h5></a>
+                <a href="characters/law.html"><h5 class="card-title card-black rounded stretched-link">Ло</h5></a>
               </div>
             </div>
             <div class="card text-bg-dark shadow-sm bg-body-tertiary rounded flex-row">
               <img src="img/robin.gif" class="img-fluid object-fit-cover" style="height: 150px;" alt="...">
               <div class="card-img-overlay d-flex align-items-end">
-                <a href="characters/robin.html"><h5 class="card-title card-black rounded">Робин</h5></a>
+                <a href="characters/robin.html"><h5 class="card-title card-black rounded stretched-link">Робин</h5></a>
               </div>
             </div>
           </div>
