--- a/characters/luffy.html
+++ b/characters/luffy.html
@@ -114,6 +114,23 @@
     <p>В начале арки Совета Королей, достижения Луффи были скомпилированы, сильно раздувая его поступки, который уже были огромными с самого начала. Это включает его отношения с его сводными названными старшими братьями — покойным бывшим капитаном Пиковых Пиратов, командиром 2-ой дивизии Пиратов Белоуса и родным сыном Гол Д. Роджера «Огненным кулаком» Портгасом Д. Эйсом и начальником штаба Революционной армии Сабо, флот, который неофициально сформировался под ним, операция по проникновению на территорию Большой Мамочки — Тотто Лэнд, где он победил Конфетных Генералов Пиратов Биг Мам — Шарлотту Крекера и Шарлотту Катакури, предпринял попытку убийства самой Большой Мамочки, уничтожив её замок непреднамеренно и быстро создал союз с Джермой 66, Пиратами Солнца и Пиратами Огненного Танка перед тем, как сбежать после того, как убийство не удалось. Хотя его возможности были слегка преувеличены прессой, его достижения были достаточно велики, чтобы он был официально назван «Пятым Императором Моря».[29]</p>
     <p>До прибытия на архипелаг Сабаоди за Луффи была назначена награда BeliSymbol300 000 000 и он был одним из одиннадцати пиратов-новичков с наградами за голову в размере более BeliSymbol100 000 000, которые одновременно достигли Рэд Лайн,[33] и теперь является одним из двенадцати пиратов «Худшего Поколения»[34]. После таймскипа награда за голову Луффи стала составлять BeliSymbol400 000 000, как было сказано «Фальшивым Луффи» и подтверждено Пасифистой. Позже, когда команда спустилась на Остров Рыболюдей, Ходи Джонс также показал листовку с ценой за Луффи, на которой была написана его новая награда. После инцидента на Дресс Розе и победы над одним из Ситибукаев — Донкихотом Дофламинго, его награда была увеличена до BeliSymbol500 000 000.[18][19] После инцидента на территории Большой Мамочки Луффи получил награду — BeliSymbol1 500 000 000.[35] После битвы на Онигасиме и победы над Кайдо, награда Луффи увеличилась до BeliSymbol3 000 000 000.</p>
 </div>
+<footer class="text-light container" style="background-color: #1f1f1f; border-radius: 15px;">
+    <div class="container py-4 rounded">
+        <div class="row  justify-content-around">
+            <div class="col-md-6">
+                <ul class="list-inline text-center d-flex justify-content-between">
+                    <li class="list-inline-item"><a href="#">Главная</a></li>
+                    <li class="list-inline-item"><a href="#">Аниме</a></li>
+                    <li class="list-inline-item"><a href="#">Манга</a></li>
+                    <li class="list-inline-item"><a href="#">Персонажи</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="text-center p-3 rounded">
+        &copy; 2023 Библиотека One Piece
+    </div>
+</footer>
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
