--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <p class="container">Что же такое One Piece?</p>
       <div class="container mb-5">
         <p>
-          <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample">
+          <a class="btn btn-danger" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample">
             Прочитать
           </a>
         </p>
@@ -165,7 +165,7 @@
                 <p class="card-text">Луффи пробуждает свой фрук и использует эту силу против Кайдо.</p>
               </div>
               <div class="card-body">
-                <a href="#" class="card-link">Ссылка карточки</a>
+                <a href="#" class="card-link">Смотреть</a>
               </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
                 <p class="card-text">Луффи пробуждает свой фрук и использует эту силу против Кайдо.</p>
               </div>
               <div class="card-body">
-                <a href="#" class="card-link">Ссылка карточки</a>
+                <a href="#" class="card-link">Смотреть</a>
               </div>
             </div>
           </div>
@@ -189,7 +189,7 @@
                 <p class="card-text">Луффи пробуждает свой фрук и использует эту силу против Кайдо.</p>
               </div>
               <div class="card-body">
-                <a href="#" class="card-link">Ссылка карточки</a>
+                <a href="#" class="card-link">Сотреть</a>
               </div>
             </div>
           </div>
@@ -201,12 +201,32 @@
                 <p class="card-text">Луффи пробуждает свой фрук и использует эту силу против Кайдо.</p>
               </div>
               <div class="card-body">
-                <a href="#" class="card-link">Ссылка карточки</a>
+                <a href="#" class="card-link">Смотреть</a>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+      <footer class="text-light container" style="background-color: #1f1f1f; border-radius: 15px;">
+        <div class="container py-4 rounded">
+            <div class="row  justify-content-around">
+                <div class="col-md-6">
+                    <ul class="list-inline text-center d-flex justify-content-between">
+                        <li class="list-inline-item"><a href="#">Главная</a></li>
+                        <li class="list-inline-item"><a href="#">Аниме</a></li>
+                        <li class="list-inline-item"><a href="#">Манга</a></li>
+                        <li class="list-inline-item"><a href="#">Персонажи</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="text-center p-3 rounded">
+            &copy; 2023 Библиотека One Piece
+        </div>
+    </footer>
+    
+    
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
