--- a/anime.html
+++ b/anime.html
@@ -19,29 +19,21 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-secondary-subtle nav-underline section" data-bs-theme="dark" >
+    <nav class="navbar navbar-expand-lg bg-secondary-subtle nav-underline section" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="img/01eefe3662a40757d082404a19bce33b.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        <a class="navbar-brand text-danger-hover" href="index.html">
+          <img src="../img/01eefe3662a40757d082404a19bce33b.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
           <span class="logo"> Библиотека One Piece</span>
         </a>
         <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
-          <span class="navbar-toggler-icon "></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ">
-            <li class="nav-item ">
-              <a class="nav-link active text-grey" aria-current="page" href="index.html">Главная</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active text-white" href="anime.html">Аниме</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active text-grey" href="manga.html">Манга</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active text-grey" href="characters.html">Персонажи</a>
-            </li>
+            <a class="nav-link text-custom-hover text-danger-hover" aria-current="page" href="../index.html">Главная</a>
+            <a class="nav-link text-custom-hover text-danger-hover" href="../anime.html">Аниме</a>
+            <a class="nav-link text-custom-hover text-danger-hover" href="../manga.html">Манга</a>
+            <a class="nav-link text-custom-hover text-danger-hover" href="../characters.html">Персонажи</a>
           </ul>
         </div>
       </div>
@@ -158,10 +150,10 @@
         <div class="row  justify-content-around">
             <div class="col-md-6">
                 <ul class="list-inline text-center d-flex justify-content-between">
-                    <li class="list-inline-item"><a href="#">Главная</a></li>
-                    <li class="list-inline-item"><a href="#">Аниме</a></li>
-                    <li class="list-inline-item"><a href="#">Манга</a></li>
-                    <li class="list-inline-item"><a href="#">Персонажи</a></li>
+                    <li class="list-inline-item"><a class="text-danger-hover" href="../index.html">Главная</a></li>
+                    <li class="list-inline-item"><a class="text-danger-hover" href="../anime.html">Аниме</a></li>
+                    <li class="list-inline-item"><a class="text-danger-hover" href="../manga.html">Манга</a></li>
+                    <li class="list-inline-item"><a class="text-danger-hover" href="../characters.html">Персонажи</a></li>
                 </ul>
             </div>
         </div>
