--- a/characters.html
+++ b/characters.html
@@ -1,25 +1,14 @@
 <!doctype html>
 <html lang="ru">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <!-- style -->
-    <link rel="stylesheet" href="style.css">
-    <!-- fonts link -->
-    <script src="https://kit.fontawesome.com/5bbab94089.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comforter&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Hello, world!</title>
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-secondary-subtle nav-underline" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-secondary-subtle nav-underline section" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand text-danger-hover" href="#">
           <img src="img/01eefe3662a40757d082404a19bce33b.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -30,35 +19,95 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ">
-            <a class="nav-link active text-custom-hover text-danger-hover" aria-current="page" href="index.html">Главная</a>
-            <a class="nav-link text-custom-hover text-danger-hover" href="anime.html">Аниме</a>
-            <a class="nav-link text-custom-hover text-danger-hover" href="manga.html">Манга</a>
-            <a class="nav-link text-custom-hover text-danger-hover" href="characters.html">Персонажи</a>
+						<li class="nav-item">
+							<a class="nav-link text-danger-hover" aria-current="page" href="index.html">Главная</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-danger-hover" href="anime.html">Аниме</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-danger-hover" href="manga.html">Манга</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-danger-hover active" href="characters.html">Персонажи</a>
+						</li>
           </ul>
         </div>
       </div>
     </nav>
-    
-      <!-- ... (остальной код без изменений) -->
 
-      <footer class="text-light container" style="background-color: #1f1f1f; border-radius: 15px;">
-        <div class="container py-4 rounded">
-            <div class="row  justify-content-around">
-              <div class="col-md-6">
-                <ul class="list-inline text-center d-flex justify-content-between">
-                    <li class="list-inline-item"><a class="text-danger-hover" href="index.html">Главная</a></li>
-                    <li class="list-inline-item"><a class="text-danger-hover" href="anime.html">Аниме</a></li>
-                    <li class="list-inline-item"><a class="text-danger-hover" href="manga.html">Манга</a></li>
-                    <li class="list-inline-item"><a class="text-danger-hover" href="characters.html">Персонажи</a></li>
-                </ul>
-            </div>
-            </div>
-        </div>
-        <div class="text-center p-3 rounded">
-            &copy; 2023 Библиотека One Piece
-        </div>
-      </footer>
-    
+		<div class="container section">
+			<h5 class="border-bottom pb-2">Главные герои</h5>
+			<div class="row row-cols-1 row-cols-md-2 row-cols-lg-5 section">
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
+							<img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+							<div class="card-img-overlay d-flex align-items-end">
+									<a href="characters/luffy.html"><h5 class="card-title card-black stretched-link text-danger-hover">монки д. луффи</h5></a>
+							</div>
+					</div>
+				</div>
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
+						<img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="card-img-overlay d-flex align-items-end">
+							<a href="characters/luffy.html"><p class="card-title card-black stretched-link text-danger-hover d-inline-block w-100">Ророноа Зоро</p></a>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary flex-row">
+						<img src="img/sanjigif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="card-img-overlay d-flex align-items-end">
+							<a href="characters/sanji.html"><p class="card-title card-black stretched-link text-danger-hover">Нами</p></a>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
+						<img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="card-img-overlay d-flex align-items-end">
+							<a href="characters/luffy.html"><p class="card-title card-black stretched-link text-danger-hover d-inline-block w-100">Винсмоук Санджи</p></a>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
+						<img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="card-img-overlay d-flex align-items-end">
+								<a href="characters/luffy.html"><p class="card-title card-black stretched-link text-danger-hover">Усопп</p></a>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
+						<img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="card-img-overlay d-flex align-items-end">
+							<a href="characters/luffy.html"><p class="card-title card-black stretched-link text-danger-hover d-inline-block">Тони Тони Чоппер</p></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<footer class="text-light container" style="background-color: #1f1f1f; border-radius: 15px;">
+			<div class="container py-4 rounded">
+					<div class="row  justify-content-around">
+						<div class="col-md-6">
+							<ul class="list-inline text-center d-flex justify-content-between">
+									<li class="list-inline-item"><a class="text-danger-hover" href="index.html">Главная</a></li>
+									<li class="list-inline-item"><a class="text-danger-hover" href="anime.html">Аниме</a></li>
+									<li class="list-inline-item"><a class="text-danger-hover" href="manga.html">Манга</a></li>
+									<li class="list-inline-item"><a class="text-danger-hover" href="characters.html">Персонажи</a></li>
+							</ul>
+					</div>
+					</div>
+			</div>
+			<div class="text-center p-3 rounded">
+					&copy; 2023 Библиотека One Piece
+			</div>
+		</footer>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
